--- a/index.html
+++ b/index.html
@@ -31,12 +31,7 @@
 
     <script>
       var editor;
-
-      var instructions = "# PPTX Slide Viewer\n\n" +
-      "PPTX Slide Viewer is an interactive tool to display the OpenXML content " +
-      "of slides within a PPTX file. It will show the contents of the OpenXML " +
-      "content and allow selecting tags to get OpenXML spec data on the tags.\n\n" +
-      "To get started, drag and drop a PPTX file in to this window."
+      var instructions;
 
       var converter = new Markdown.Converter();
       Markdown.Extra.init(converter);
@@ -155,7 +150,17 @@
           }
         }, false);
 
-        loadMarkdown(instructions);
+        $.ajax({
+          type: 'GET',
+          url: 'README.md',
+          success: function(msg) {
+            instructions = msg;
+            loadMarkdown(msg);
+          },
+          error: function(xhr, ajaxOptions, thrownError) {
+            loadMarkdown('An unknown error occured.');
+          }
+        });
       });
 
       function loadMarkdown(content) {
@@ -200,6 +205,11 @@
         });
       }
     </script>
+    <a href="https://github.com/elliottcarlson/pptx-viewer"><img style="position: absolute; top: 0; right:
+    0; border: 0;"
+    src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67"
+    alt="Fork me on GitHub"
+    data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
   </body>
 </html>
 
